@@ -67,7 +67,7 @@ IMAGEWIN_OBJS=imagebuf.o imagewin.o iwin8.o ibuf8.o ibuf16.o imagescl.o \
 SHAPES_OBJS=bodies.o items.o shapeinf.o shapevga.o vgafile.o font.o fontvga.o
 
 OBJS_OBJS=animate.o barge.o chunks.o contain.o egg.o iregobjs.o objs.o \
-	spellbook.o virstone.o
+	spellbook.o virstone.o jawbone.o
 
 USECODE_OBJS=ucmachine.o ucsched.o intrinsics.o useval.o conversation.o
 
