@@ -2,6 +2,7 @@
 	* gumps/Jawbone_gump.*: gump for the Serpent Jawbone
 	* gamewin.cc, gumps/Gump.cc, objs/contain.cc: use new gump
 	* Makefile.*: build new gump
+	* objs/jawbone.*: Jawbone_object
 
 2001-06-17  Jeff Freedman  <jeff@amy.nerble.net>
 
